--- a/website-view/package.json
+++ b/website-view/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.3.28",
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
