--- a/website-view/package.json
+++ b/website-view/package.json
@@ -1,5 +1,6 @@
 {
   "name": "website-view",
+  "homepage": "https://theserano.github.io/dashboard-design",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",    
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -15,6 +18,7 @@
     "@emotion/styled": "^11.13.0",
     "chart.js": "^4.4.4",
     "framer-motion": "^11.5.4",
+    "gh-pages": "^6.1.1",
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
