--- a/mobile_view/pubspec.yaml
+++ b/mobile_view/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_side_menu: ^0.5.3
   flutter_svg: ^2.0.10+1
+  google_fonts: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -75,10 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: PlusJakartaSans
+      fonts:
+        - asset: lib/assets/fonts/PlusJakartaSans-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
