--- a/mobile_view/pubspec.yaml
+++ b/mobile_view/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_side_menu: ^0.5.3
   flutter_svg: ^2.0.10+1
   google_fonts: ^5.0.0
+  percent_indicator: ^4.0.1
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
