--- a/mobile_view/pubspec.yaml
+++ b/mobile_view/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^5.0.0
   percent_indicator: ^4.0.1
   fl_chart: ^0.69.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
