--- a/mobile_view/pubspec.yaml
+++ b/mobile_view/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   percent_indicator: ^4.0.1
   fl_chart: ^0.69.0
   carousel_slider: ^5.0.0
+  syncfusion_flutter_sliders: ^27.1.56
 
 dev_dependencies:
   flutter_test:
